[tool.poetry]
name = "repl_python3_beta_FireTheBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pyjokes = "^0.6.0"
replit = "^3.2.4"
randfacts = "^0.8.0"
xkcd = "^2.4.2"
bs4 = "^0.0.1"
Flask = "^2.0.1"
newsapi = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
